--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -4,6 +4,6 @@
   <%= f.label :content %>
   <%= f.text_field :content %>
   <%= f.label :url %>
-  <%= f.text_field :rating %>
+  <%= f.text_field :url %>
   <%= f.submit %>
 <% end %>
