--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,9 +1,6 @@
-<%= form_with model: @article do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-  <%= f.label :url %>
-  <%= f.text_field :url %>
+<%= simple_form_for(article) do |f| %>
+  <%= f.input :title %>
+  <%= f.input :content %>
+  <%= f.input :url %>
   <%= f.submit %>
 <% end %>
